# Prefect-Implementation

./: README.md  etl.py  etl_schedule.py  main.py  pyproject.toml  test.py  triggers.py
data/: users_1658815046.csv
