[tool.poetry]
name = "prefect test"
version = "0.1.0"
description = ""
authors = ["Satwik Ram <satwik.ram@isg-one.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prefect = "^1.2.4"
pandas = "^1.4.3"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
